--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,61 +2,35 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@v3
+    
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install buildozer
         sudo apt-get update
-        sudo apt-get install -y zip unzip autoconf automake libtool pkg-config zlib1g-dev
+        sudo apt-get install -y git zip unzip autoconf automake libtool pkg-config zlib1g-dev
+        pip install buildozer
+
     - name: Build APK
       run: |
-        echo "Creating buildozer.spec..."
-        cat > buildozer.spec 
-       <<EOL
-       [app]
-       title = Sprite Processor
-       package.name = spriteprocessor
-       package.domain = org.noctrox
-       source.dir = .
-       source.include_exts = py,png,jpg,kv,atlas
-       version = 1.0
-       requirements = python3,kivy,pillow,openssl,requests
-       orientation = portrait
-       osx.python_version = 3
-       osx.kivy_version = 2.0.0
-       fullscreen = 0
-       android.permissions = READ_EXTERNAL_STORAGE,WRITE_EXTERNAL_STORAGE
-       android.api = 30
-       android.minapi = 21
-       android.ndk = 19b
-       android.sdk = 20
-       android.ndk_path = /home/runner/android-ndk-r19b
-       android.sdk_path = /home/runner/android-sdk
-       p4a.branch = master
-       android.arch = armeabi-v7a
-       EOL
-
         buildozer -v android debug
-        cp bin/*.apk .
+        mv bin/*.apk .
 
     - name: Upload APK
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
-        name: sprite-processor
+        name: SpriteProcessor
         path: *.apk
