--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,10 +23,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y git zip unzip autoconf automake libtool pkg-config zlib1g-dev
         pip install buildozer
-
+        
     - name: Build APK
       run: |
-        buildozer init
+        buildozer init || true  # Si ya hay buildozer.spec, no falla
         buildozer -v android debug
         mv bin/*.apk .
 
@@ -35,15 +35,3 @@ jobs:
       with:
         name: SpriteProcessor
         path: *.apk
-
-    - name: Run on Emulator
-      run: |
-        echo "Installing emulator..."
-        sudo apt-get install -y qemu-kvm android-emulator
-        echo "Starting emulator..."
-        emulator -avd test_avd -no-audio -no-window &
-        adb wait-for-device
-        echo "Installing APK..."
-        adb install *.apk
-        echo "Launching app..."
-        adb shell am start -n org.noctrox.spriteprocessor/org.kivy.android.PythonActivity
