--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: SpriteProcessor
-        path: *.apk
+        path: ola.apk
